# ccpp

Code/Chapter1/: 01.hello_world.c  02.debug_c_program.c  03.code_style_bad_names.c  03.code_style_comments.c  03.code_style_good_names.c  CMakeLists.txt
Code/Chapter2/: 01.data_types.c  01.data_types_int.c  02_date_type_char.c  03.date_types_flaot.c  04.variable.c  05.constant.c  06.operators.c  07.condition.c  08.loop.c  09.guess_number.c  CMakeLists.txt
Code/Chapter3/: 01.function_basics.c  02.porto_type.c  03.variable_types_and _scope.c  04.varargs.c  05.recursion.c  06.hanoi.c  CMakeLists.txt
Code/Chapter4/: 01.file_include.c  02.my_include_file.c  03.macro_function.c  04.conditional_marco.c  05.prinlnf.c  CMakeLists.txt
Code/Chapter4/include/: factorial.h
Code/Chapter4/src/: factorial.c
Code/Chapter5/: 01.array_basics.c  02.array_limits.c  03.string.c  04.array_parameter.c  05.2d_array.c  06.shuffle_array.c  07.quick_sort.c  CMakeLists.txt
Code/Chapter5/include/: io_utils.h
